--- a/user/manual.html
+++ b/user/manual.html
@@ -1480,7 +1480,8 @@ decl = SConsArguments.ImportArguments('myargs')</pre><p>Having
 						<td>swig</td>
 						<td>Arguments related to 
 						SWIG</td>
-						<td><code class="varname">SWIGFLAGS</code>, 
+            <td><code class="varname">SWIGF</code>, 
+            <code class="varname">SWIGFLAGS</code>, 
 						<code class="varname">SWIGPATH</code></td>
 					</tr><tr>
 						<td>tar</td>
